# demos

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  geany_run_script.bat  readme.md  tests.py  yii-to-yii2.py
generated-oparl-rs/: Cargo.toml  codegen.py  readme.md
generated-oparl-rs/src/: external_list.rs  main.rs  schema.rs  urls.rs
oparl-cache-rs/: readme.md
oparl-cache-rs/src/: cacher.rs  file_storage.rs  lib.rs  main.rs  storage.rs
oparl-cache-rs/tests/: external_list.rs  storage.rs
oparl-cache-rs/tests/common/: mod.rs
oparl-simple-crawler/: .gitignore  Cargo.toml  readme.md
oparl-simple-crawler/src/: main.rs
oparl-to-wikidata-import/: cache.py  import_properties.py  main.py  mapping.json  oparl_to_wikidata.py  requirements.txt  server_iterator.py
rust-rocket-diesel-oparl/: README.md
rust-rocket-diesel-oparl/src/: db.rs  main.rs  oparl.rs
rust-to-wasm/: .gitignore  Cargo.toml  index.html  package.json
rust-to-wasm/src/: index.js  main.rs
src/: access.rs  cacher.rs  constants.rs  external_list.rs  file_storage.rs  helper.rs  lib.rs  main.rs  oparl_cache.rs  schema.rs  server.rs  storage.rs  test.rs
tests/: cacher.rs  external_list.rs  storage.rs
tests/common/: factories.rs  mocking_server.rs  mod.rs
tictactoe-rs/: Cargo.toml
tictactoe-rs/src/: main.rs
wikiparl/: .gitignore  Pipfile  main.py
yii-to-yii2/: tests.py
