[package]
authors = ["konstin <konstin@mailbox.org>"]
name = "rustparl"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.10.1"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

[dependencies.diesel]
features = ["mysql", "chrono", "large-tables"]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["mysql"]
version = "0.16.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "*"
